@@ -1,3 +1,4 @@
+7/2/14 #45 replace obtuse method of calling game initializer with a switch statement
 7/2/14 #56 add a smiley face to Introduction screen that appears when equation is balanced
 7/2/14 #62 relocate 'move' icon to upper-left of game dialog
 6/25/14 #29 game dialogs: reduce font size, reduce vertical spacing, reduce size of X and check mark
